<resources>
    <string name="app_name">MyApp</string>
    <string name="title_email_authorization">Enter the Email</string>
    <string name="hint_email_edit_text_authorization">Enter the Email</string>
    <string name="title_password_authorization">Enter the Password</string>
    <string name="hint_password_edit_text_authorization">Enter the Password</string>
    <string name="hint_re_password_edit_text_authorization">Enter the Re-Password</string>
    <string name="hint_firstname_edit_text_authorization">Enter the Firstname</string>
    <string name="hint_lastname_edit_text_authorization">Enter the Lastname</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_to_login">Login</string>
    <string name="button_to_register">Register</string>

    <string name="welcome_message_fmt">Hello %1s</string>
</resources>