<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="@color/bg_header_authorization"
        android:paddingTop="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            android:src="@drawable/ic_bg_splash_authorization" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="38dp"
                android:src="@drawable/ic_logo" />

        </LinearLayout>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Register"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <EditText
        android:id="@+id/activity_authorization_edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_email_edit_text_authorization"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:textColor="#000" />

    <EditText
        android:id="@+id/activity_authorization_edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_password_edit_text_authorization"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:textColor="#000" />

    <EditText
        android:id="@+id/activity_authorization_edit_text_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_re_password_edit_text_authorization"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:textColor="#000" />

    <EditText
        android:id="@+id/activity_authorization_edit_text_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_firstname_edit_text_authorization"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:textColor="#000" />

    <EditText
        android:id="@+id/activity_authorization_edit_text_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_lastname_edit_text_authorization"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:textColor="#000" />

    <Button
        android:id="@+id/activity_authorization_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_button"
        android:enabled="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/button_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/text_button_authorization"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account? " />

        <TextView
            android:id="@+id/activity_authorization_text_view_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_to_login"
            android:textStyle="bold"
            android:foreground="?attr/selectableItemBackground" />

    </LinearLayout>

</LinearLayout>